--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/andiblas/react-starter/issues"
   },
-  "homepage": "https://github.com/andiblas/react-starter#readme"
+  "homepage": "https://github.com/andiblas/react-starter#readme",
+  "dependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "webpack": "^1.13.3"
+  }
 }
