--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Pruebas para empezar a conocer React",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "compile": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +24,8 @@
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "webpack": "^1.13.3"
+    "express": "^4.14.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4"
   }
 }
