--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pruebas para empezar a conocer React",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "webpack && node server.js",
     "compile": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.16.0",
     "express": "^4.14.0",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4"
